@@ -373,6 +373,8 @@ static const char *ErrorNum2String(tErrorNum Num, char *Buf, int BufSize)
       msgno = Num_ErrMsgInvCPUType; break;
     case ErrNum_InvFPUType:
       msgno = Num_ErrMsgInvFPUType; break;
+    case ErrNum_InvPMMUType:
+      msgno = Num_ErrMsgInvPMMUType; break;
     case ErrNum_InvCtrlReg:
       msgno = Num_ErrMsgInvCtrlReg; break;
     case ErrNum_InvReg:
