@@ -3963,13 +3963,17 @@ The commands have the following meanings in detail:
 \item{\tty{FPU}: allows or prohibits the commands of the numerical
       coprocessors 8087, NS32081/32381 resp. 68881 or 68882.  The status
       variable is called \tty{FPUAVAIL}.  For NS32xxx as target, specifying
-      the explicit FPU type (\tty{NS32081} or \tty{NS32381}) is also possible,
-      to enable or disable the additional registers and instructions.}
+      the explicit FPU type (\tty{NS32081}, \tty{NS32181}, \tty{NS32381},
+      or \tty{NS32580}) is also possible, to enable or disable the additional
+      registers and instructions.}
 \item{\tty{PMMU}: allows or prohibits the commands of the memory
       management unit 68851 resp. of  the built-in MMU of the 68030.
       \bb{CAUTION!} The 68030-MMU supports only a relatively small subset
       of the 68851 instructions.  This is controlled via the \tty{FULLPMMU}
-      statement. The status variable is called \tty{PMMUAVAIL}.}
+      statement. The status variable is called \tty{PMMUAVAIL}. For NS32xxx
+      as target, specifying the explicit MMU type as target (\tty{NS32082},
+      \tty{NS32381}, or \tty{NS32352}) is also possible, to enable access to
+      the MMU-type-specific register set.}
 \end{itemize}
 The usage of of instructions prohibited in this manner will generate a
 warning at \tty{SUPMODE}, at \tty{PMMU} and \tty{FPU} a real error
@@ -11654,6 +11658,11 @@ described by:
                {The co-processor type used as argument for \tty{FPU} command is
                 unknown to AS.}
                {the unknown co-processor type}
+\errentry{1432}{invalid PMMU type}
+               {error}
+               {The MMU type used as argument for \tty{PMMU} command is
+                unknown to AS.}
+               {the unknown MMU type}
 \errentry{1440}{invalid control register}
                {error}
                {The control register used by a \tty{MOVEC} is not (yet) available
