@@ -121,7 +121,9 @@ typedef enum
   ErrNum_InvCmpMode = 1420,
   ErrNum_InvCPUType = 1430,
   ErrNum_InvFPUType = 1431,
+  ErrNum_InvPMMUType = 1432,
   ErrNum_InvCtrlReg = 1440,
+  ErrNum_InvPMMUReg = 1444,
   ErrNum_InvReg = 1445,
   ErrNum_DoubleReg = 1446,
   ErrNum_RegBankMismatch = 1447,
