@@ -1,1 +1,1 @@
--cpu ns32332 -relaxed
+-cpu ns32532 -relaxed
